chore: add string INCAPACIDADE_TOTAL_OU_TEMPORARIA to coverage enum

--- a/documentation/source/swagger/partials/open_people_risk_welfare.yaml
+++ b/documentation/source/swagger/partials/open_people_risk_welfare.yaml
@@ -179,6 +179,7 @@ components:
                         DOENCA_GRAVE,
                         FRATURA_OSSEA,
                         DOENCAS_TROPICAIS,
+                        INCAPACIDADE_TOTAL_OU_TEMPORARIA,
                         INCAPACIDADE_TOTAL_ACIDENTE,
                         INCAPACIDADE_PARCIAL_ACIDENTE,
                         INTERNACAO_HOSPITALAR,
