chore: add string TRANSLADO_MEDICO to coverage enum

--- a/documentation/source/swagger/partials/open_people_risk_welfare.yaml
+++ b/documentation/source/swagger/partials/open_people_risk_welfare.yaml
@@ -202,6 +202,7 @@ components:
                         SOBREVIVENCIA,
                         TRANSPLANTE_ORGAOS,
                         TRANSLADO,
+                        TRANSLADO_MEDICO,
                         TRANSLADO_CORPO,
                         VERBA_RESCISORIA,
                         OUTROS]
