chore: add strings EQUIPAMENTOS_MEDICOS and OUTROS to additional enum

--- a/documentation/source/swagger/partials/open_people_risk_welfare.yaml
+++ b/documentation/source/swagger/partials/open_people_risk_welfare.yaml
@@ -235,6 +235,7 @@ EDUCACIONAL,
 EMPRESARIAL,
 ENCANADOR,
 ENTRETENIMENTO,
+EQUIPAMENTOS_MEDICOS,
 FIANCAS_DESPESAS_LEGAIS,
 FISIOTERAPIA,
 FUNERAL,
@@ -252,6 +253,7 @@ ODONTOLOGICA,
 ORIENTACAO_FITNESS,
 ORIENTACAO_JURIDICA,
 ORIENTACAO_NUTRICIONAL,
+OUTROS,
 PERSONAL_FITNESS,
 ORIENTACAO_PSICOSSOCIAL_FAMILIAR,
 PERDA_ROUBO_CARTAO,
