fix: change string OUTROS to OUTRAS on coverage enum

--- a/documentation/source/swagger/partials/open_people_risk_welfare.yaml
+++ b/documentation/source/swagger/partials/open_people_risk_welfare.yaml
@@ -204,7 +204,7 @@ components:
                         TRANSLADO_MEDICO,
                         TRANSLADO_CORPO,
                         VERBA_RESCISORIA,
-                        OUTROS]
+                        OUTRAS]
                 coverageOthers:
                   type: array
                   items:
