chore: add string INVALIDEZ_PERMANENTE_TOTAL_PARCIAL to coverage enum

--- a/documentation/source/swagger/partials/open_people_risk_welfare.yaml
+++ b/documentation/source/swagger/partials/open_people_risk_welfare.yaml
@@ -180,11 +180,12 @@ components:
                         FRATURA_OSSEA,
                         DOENCAS_TROPICAIS,
                         INCAPACIDADE_TOTAL_OU_TEMPORARIA,
-                        INCAPACIDADE_TOTAL_ACIDENTE,
-                        INCAPACIDADE_PARCIAL_ACIDENTE,
+                        INVALIDEZ_TOTAL_ACIDENTE,
+                        INVALIDEZ_PARCIAL_ACIDENTE,
                         INTERNACAO_HOSPITALAR,
                         INVALIDEZ_FUNCIONAL_PERMANENTE_DOENCA,
                         INVALIDEZ_LABORATIVA_DOENCA,
+                        INVALIDEZ_PERMANENTE_TOTAL_PARCIAL.
                         MORTE,
                         MORTE_ACIDENTAL,
                         MORTE_CONJUGE,
