fix: fix string PAGAMENTO_UNICO of costType enum

--- a/documentation/source/swagger/partials/open_prize_linked_savings_accounts.yaml
+++ b/documentation/source/swagger/partials/open_prize_linked_savings_accounts.yaml
@@ -149,7 +149,7 @@ components:
             description: Forma de custeio
             items:
                 type: string
-                enum: [PAGMENTO_UNICO, PAGAMENTO_MENSAL, PAGAMENTO_PERIODICO]
+                enum: [PAGAMENTO_UNICO, PAGAMENTO_MENSAL, PAGAMENTO_PERIODICO]
           termsAndConditions:
             $ref: '#/components/schemas/CapitalizationTitleTerms'
           quotas:
