fix: change enum name to destinationInsuredImportance

--- a/documentation/source/swagger/partials/open_residence.yaml
+++ b/documentation/source/swagger/partials/open_residence.yaml
@@ -383,7 +383,7 @@ components:
                 description: Descrição do tipo de uso da propriedade.
                 example: HABITUAL
                 enum: [HABITUAL , VERANEIO , DESOCUPADO , CASA_ESCRITORIO , ALUGUEL_TEMPORADA]
-            importanceInsured:
+            destinationInsuredImportance:
               type: string
               description: Destinação da Importância Segurada.
               example: PREDIO
