chore: build checkout current branch/ref

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref }}
+
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
