--- a/documentation/source/swagger/partials/open_residence.yaml
+++ b/documentation/source/swagger/partials/open_residence.yaml
@@ -5,7 +5,7 @@ info:
     API de informações de Seguro Residencial. Os recursos que podem ser consumidos pelos participantes conforme a regra 3.2.2 do manual de escopo de dados.
   version: 1.0.0
   contact:
-    url: 'https://openinsurance.susep.gov.br'
+    url: 'https://http://novosite.susep.gov.br'
 servers:
   - url: 'https://api.organizacao.com.br/open-insurance/products-services/v1'
     description: Servidor de Produção
@@ -55,7 +55,7 @@ paths:
         '500':
           $ref: '#/components/responses/InternalServerError'
         default:
-          description: ''
+          description: Dados dos Seguros Residenciais
           content:
             application/json:
               schema:
@@ -93,24 +93,25 @@ components:
         company:
           $ref: '#/components/schemas/HomeInsuranceCompany'
     HomeInsuranceCompany:
-      type: object
-      description: Informações referente a sociedade a qual a marca pertence.
-      required:
-        - name
-        - cnpjNumber
-      properties:
-        name:
-          type: string
-          description: Nome da sociedade pertencente à marca.
-          maxLength: 80
-          example: ABCDE SEGUROS
-        cnpjNumber:
-          type: string
-          description: CNPJ da sociedade pertencente à marca.
-          maxLength: 14
-          example: "12345678901234"
-        products:
-          $ref: '#/components/schemas/HomeInsuranceProduct'
+      type: array
+      items:
+        description: Informações referente a sociedade a qual a marca pertence.
+        required:
+          - name
+          - cnpjNumber
+        properties:
+          name:
+            type: string
+            description: Nome da sociedade pertencente à marca.
+            maxLength: 80
+            example: ABCDE SEGUROS
+          cnpjNumber:
+            type: string
+            description: CNPJ da sociedade pertencente à marca.
+            maxLength: 14
+            example: "12345678901234"
+          products:
+            $ref: '#/components/schemas/HomeInsuranceProduct'
     HomeInsuranceProduct:
       type: array
       description: Produtos de Seguro Residencial.
@@ -147,19 +148,21 @@ components:
           propertyCharacteristics:
             $ref: '#/components/schemas/HomeInsurancePropertyCharacteristics'
           propertyZipCode:
-            type: integer
+            type: string
             description: Código de Endereçamento Postal do Imóvel
             maxLength: 8
-            example: 1311000
+            example: "1311000"
           protective:
             type: boolean
             description: Protecionais - Indicativo de exigência de itens protecionais.
             example: true
           additional:
-            type: string
-            description: Adicionais do Produto.
-            example: SORTEIO_GRATUITO
-            enum: [SORTEIO_GRATUITO , CLUBE_BENEFICIOS , CASHBACK , DESCONTOS , OUTROS]
+            type: array
+            items:
+              type: string
+              description: Adicionais do Produto.
+              example: SORTEIO_GRATUITO
+              enum: [SORTEIO_GRATUITO , CLUBE_BENEFICIOS , CASHBACK , DESCONTOS , OUTROS]
           additionalOthers:
             type: string
             description: Campo aberto para descrição de cada participante ao selecionar o domínio ‘Outros’ no campo acima ‘Adicionais’.
@@ -181,17 +184,19 @@ components:
             type: array
             description: Distribuição de frequência relativa aos valores referentes às taxas cobradas.
             items:
-                type: string
+              type: string
           premiumPayments:
             $ref: '#/components/schemas/HomeInsurancePremiumPayment'
           minimumRequirements:
-            $ref: '#/components/schemas/HomeInsuranceMinimumRequirements'
-          targetAudiences:
-            type: string
-            description: Público a quem se destina o produto
-            maxLength: 30
-            example: PESSOA_NATURAL
+            type: array
             items:
+              $ref: '#/components/schemas/HomeInsuranceMinimumRequirements'
+          targetAudiences:
+            type: array
+            items:
+              type: string
+              description: Público a quem se destina o produto
+              example: PESSOA_NATURAL
               enum: [PESSOA_NATURAL , PESSOA_JURIDICA, AMBAS]
     HomeInsuranceMinimumRequirements:
       type: object
@@ -203,7 +208,7 @@ components:
         contractingType:
           type: string
           description: Tipo de contratação.
-          enum: [COLETIVO , INDIVIDUAL]
+          enum: [COLETIVO , INDIVIDUAL, AMBAS]
         contractingMinRequirement:
           type: string
           description: Campo aberto contendo todos os requisitos mínimos para contratação (possibilidade de incluir URL).
@@ -257,13 +262,13 @@ components:
         type: object
         required:
           - susepProcessNumber
-          - termAndCondition
+          - definition
         properties:
           susepProcessNumber:
-            type: number
+            type: string
             description: Número do processo SUSEP.
             maxLength: 20
-            example: 0000000000000000
+            example: XXXXX.XXXXXX/XXXX-XX
           definition:
             type: string
             description: Campo aberto (possibilidade de incluir uma url).
@@ -299,7 +304,7 @@ components:
               type: string
               description: Meio de pagamento escolhido pelo segurado.
               example: CARTAO_CREDITO
-              enum: [CARTAO_CREDITO , CARTAO_DEBITO , DEBITO_CONTA_CORRENTE , DEBITO_CONTA_POUPANCA , BOLETO_BANCARIO , PIX , CONSIGINACAO_FOLHA_PAGAMENTO , PAGAMENTO_COM_PONTOS]
+              enum: [CARTAO_CREDITO , CARTAO_DEBITO , DEBITO_CONTA_CORRENTE , DEBITO_CONTA_POUPANCA , BOLETO_BANCARIO , PIX , CONSIGINACAO_FOLHA_PAGAMENTO , PONTOS_PROGRAMAS_BENEFICIO, OUTROS]
             paymentMethodDetail:
               type: string
               description: Campo aberto para detalhamento do campo ‘Outros’ por cada participante.
@@ -307,8 +312,8 @@ components:
             paymentType:
               type: string
               description: Forma de pagamento
-              example: A_VISTA
-              enum: [A_VISTA , PARCELADO, AMBOS]
+              example: PAGAMENTO_UNICO
+              enum: [PAGAMENTO_UNICO , PARCELADO, AMBOS]
     HomeInsuranceAssistanceServices:
       type: array
       description: Agrupamento dos serviços de assistências disponíveis vinculado ao produto.
@@ -333,7 +338,7 @@ components:
             type: string
             description: Sinalização em campo exclusivo se o pacote de Assistência é gratuita ou contratada/paga.
             example: GRATUITA
-            enum: [GRATUITA, PAGA]
+            enum: [GRATUITA, PAGO]
     HomeInsuranceCoverages:
       type: array
       description: Listagem de coberturas incluídas no produto.
@@ -342,12 +347,12 @@ components:
         required:
             - coverageType
             - coverageDetail
-            - coveragePermissionSeparteAcquisition
+            - coveragePermissionSeparteAquisition
             - coverageAttributes
         properties:
           coverageType:
             type: string
-            enum: [IMOVEL_BASICA , IMOVEL_AMPLA , DANOS_ELETRICOS , DANOS_POR_AGUA , ALAGAMENTO , RESPONSABILIDADE_CIVIL_FAMILIAR, RESPONSABILIDADE_CIVIL_DANOS_MORAIS , ROUBO_SUBTRACAO_BENS , ROUBO_SUBTRACAO_BENS_FORA_LOCAL_SEGURADO , TACOS_GOLFE_HOLE_ONE , PEQUENAS_REFORMAS_OBRA , GREVES_TUMULTOS_LOCKOUT , MICROEMPREENDEDOR , ESCRITORIO_RESIDENCIA , DANOS_EQUIPAMENTOS_ELETRONICOS , QUEBRA_VIDROS , IMPACTO_VEICULOS , VENDAVAL , PERDA_PAGAMENTO_ALUGUEL , BICICLETA , RESPONSABILIDADE_CIVIL_BICICLETA , RC_EMPREGADOR , DESMORONAMENTO , DESPESAS_EXTRAORDINARIAS , JOIAS_OBRAS_ARTE , TERREMOTO , IMPACTO_AERONAVES , PAISAGISMO ,  INCENDIO , QUEDA_RAIO , EXPLOSAO, OUTRAS]
+            enum: [IMOVEL_BASICA , IMOVEL_AMPLA , DANOS_ELETRICOS , DANOS_POR_AGUA , ALAGAMENTO , RESPONSABILIDADE_CIVIL_FAMILIAR, RESPONSABILIDADE_CIVIL_DANOS_MORAIS , ROUBO_SUBTRACAO_BENS , ROUBO_SUBTRACAO_BENS_FORA_LOCAL_SEGURADO , TACOS_GOLFE_HOLE_ONE , PEQUENAS_REFORMAS_OBRAS , GREVES_TUMULTOS_LOCKOUT , MICROEMPREENDEDOR , ESCRITORIO_RESIDENCIA , DANOS_EQUIPAMENTOS_ELETRONICOS , QUEBRA_VIDROS , IMPACTO_VEICULOS , VENDAVAL , PERDA_PAGAMENTO_ALUGUEL , BICICLETA , RESPONSABILIDADE_CIVIL_BICICLETA , RC_EMPREGADOR , DESMORONAMENTO , DESPESAS_EXTRAORDINARIAS , JOIAS_OBRAS_ARTE , TERREMOTO , IMPACTO_AERONAVES , PAISAGISMO ,  INCENDIO , QUEDA_RAIO , EXPLOSAO, OUTRAS]
             description: Nome do tipo da cobertura.
             maxLength: 1000
             example: ESCRITORIO_RESIDENCIA
@@ -356,7 +361,7 @@ components:
             description: Campo aberto para detalhamento por coberturas possíveis dos produtos a ser feito por cada participante.
             maxLength: 1000
             example: Cobertura especial para escritório residenciais
-          coveragePermissionSeparteAcquisition:
+          coveragePermissionSeparteAquisition:
             type: boolean
             description: Indicação se a cobertura permite contratação separada (por cobertura selecionada).
             example: false
@@ -371,7 +376,7 @@ components:
             - propertyType
             - propertyUsageType
             - propertyBuildType
-            - importanceInsured
+            - destinationInsuredImportance
           properties:
             propertyType:
                 description: Tipo de imóvel.
@@ -388,7 +393,7 @@ components:
                 description: Descrição do tipo de uso da propriedade.
                 example: HABITUAL
                 enum: [HABITUAL , VERANEIO , DESOCUPADO , CASA_ESCRITORIO , ALUGUEL_TEMPORADA]
-            importanceInsured:
+            destinationInsuredImportance:
               type: string
               description: Destinação da Importância Segurada.
               example: PREDIO
