--- a/documentation/source/swagger/open_data_products_services.yaml
+++ b/documentation/source/swagger/open_data_products_services.yaml
@@ -3351,8 +3351,11 @@ components:
           example: '2021-08-20T08:30:00Z'
         data:
           type: object
-        brand:
-          $ref: '#/components/schemas/PensionPlanBrand'
+          required:
+            - PensionPlanBrand
+          properties:
+            brand:
+              $ref: '#/components/schemas/PensionPlanBrand'
         linksPaginated:
           $ref: '#/components/schemas/LinksPaginated1'
         metaPaginated:
