--- a/documentation/source/swagger/partials/open_vehicle.yaml
+++ b/documentation/source/swagger/partials/open_vehicle.yaml
@@ -5,19 +5,19 @@ info:
     API de informações de Seguro de Automóveis. Os recursos que podem ser consumidos pelos participantes conforme a regra 3.2.2 do manual de escopo de dados.
   version: 1.0.0
   contact:
-    url: 'https://http://novosite.susep.gov.br'
+    url: 'https://openinsurance.susep.gov.br'
 servers:
   - url: 'https://api.organizacao.com.br/open-insurance/products-services/v1'
     description: Servidor de Produção
   - url: 'https://api.organizacao.com.br/open-insurance/products-services/v1'
     description: Servidor de Homologação
 tags:
-- name: "auto-insurance"
+- name: "Seguros de Automóveis"
 paths:
   /auto-insurance/{commercializationArea}/{fipeCode}/{year}:
     get:
       tags:
-        - auto-insurance
+        - "Seguros de Automóveis"
       summary: Obtém informações de seguros de automóveis
       description: "Obtém informações de seguros de automóveis"
       operationId: "getAutoInsurance"
