chore: add widdershins user templates for better tag and general disposal

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,11 +64,13 @@ jobs:
         run: |
           widdershins source/swagger/admin_metrics.yaml \
           -o source/includes/partials_admin_metrics/_admin_metrics.md.erb \
+          --user_templates source/templates/openapi3/ \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
 
           widdershins source/swagger/status_outage.yaml \
           -o source/includes/partials_common_apis/_status_and_outages.md.erb \
+          --user_templates source/templates/openapi3/ \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
 
@@ -77,11 +79,13 @@ jobs:
         run: |
           widdershins source/swagger/open_data_channels.yaml \
           -o source/includes/partials_open_insurance/_open_data_channels.md.erb \
+          --user_templates source/templates/openapi3/ \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
 
           widdershins source/swagger/open_data_products_services.yaml \
           -o source/includes/partials_open_insurance/_open_data_products_services.md.erb \
+          --user_templates source/templates/openapi3/ \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
 
